<resources>
    <string name="app_name">YesOrNo</string>
    <string name="questionmark">\?</string>
    <string name="ic_favorites_content_description">favorites</string>
    <string name="all_questions">Все данетки</string>
    <string name="all_questions_count">В каталоге более %1$s данеток</string>
    <string name="how_to_play_title">Как играть?</string>
    <string name="how_to_play_description">Правила игры в данетки довольно просты. Ведущий читает головоломку вслух для всех игроков или одного игрока, а ее ответ читает про себя. После этого игроки задают различные вопросы, пытаясь разгадать ситуацию, которая стоит за всем этим. Вопросы можно задавать ведущему любые, но отвечать тот может только двумя словами: «да» или «нет».</string>
    <string name="got_it">Понятно</string>
    <string name="get_back_to_list">Вернуться к списку</string>
    <string name="next_question">Следующая данетка</string>
    <string name="iv_difficulty_content_desc">Сложность</string>
    <string name="get_back_to_categories">Вернуться к категориям</string>
    <string name="did_you_like_the_question">Понравилась данетка?</string>
    <string name="show_answer">Показать ответ</string>
    <string name="hide_answer">Спрятать ответ</string>
</resources>