<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_primary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question_details_tv_back_to_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/helvetica"
            android:text="@string/get_back_to_list"
            app:drawableStartCompat="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/question_details_tv_next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/helvetica"
            android:text="@string/next_question"
            app:drawableEndCompat="@drawable/ic_arrow_right" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/question_details_tv_question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="30sp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_question"
        tools:text="Название данетки" />

    <ImageView
        android:id="@+id/question_details_iv_favorite"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/question_details_tv_question_title"
        app:layout_constraintBottom_toBottomOf="@id/question_details_tv_question_title"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/question_details_tv_time_to_solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10 мин."
        app:drawableLeftCompat="@drawable/ic_time"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/question_details_tv_question_title"
        app:layout_constraintStart_toStartOf="@id/question_details_tv_question_title"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica"
        android:textSize="16sp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/question_details_cv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/question_details_tv_rate_question"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/question_details_tv_time_to_solve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        android:backgroundTint="@color/app_primary"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/question_details_tv_question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:fontFamily="@font/helvetica"
            tools:text="Мужчина был. А потом не стал. Что произошло? Было, кстати, лето 30 сентября 1999 года от рождения Христа ИИ - новой версии Иисуса, основанной на нейросети DALL-E"
            android:layout_margin="20dp"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/question_details_tv_rate_question"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/question_details_iv_divider"
        android:fontFamily="@font/helvetica"
        android:layout_marginBottom="20dp"
        android:text="@string/did_you_like_the_question"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/question_details_iv_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@id/question_details_btn_show_answer"
        android:src="@drawable/ic_vertical_line"/>

    <ImageView
        android:id="@+id/question_details_iv_like_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toStartOf="@id/question_details_iv_divider"
        app:layout_constraintBottom_toBottomOf="@id/question_details_iv_divider"
        android:src="@drawable/ic_like_question"/>

    <ImageView
        android:id="@+id/question_details_iv_dislike_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dont_like_question"
        app:layout_constraintStart_toEndOf="@id/question_details_iv_divider"
        app:layout_constraintBottom_toBottomOf="@id/question_details_iv_divider"
        android:layout_marginHorizontal="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/question_details_btn_show_answer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cornerRadius="25dp"
        android:textAllCaps="false"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/show_answer"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/app_secondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>